# ntsx

./: .gitignore  README.md  data_demo.ipynb  demo.ipynb  graph_class_demo.ipynb  graph_class_with_edges_demo.ipynb  graph_classification_demo.ipynb  pyproject.toml
.github/workflows/: commit-ci..yml  daily-ci.yml  pr-ci.yml
data/dummyNTS/: households.tab
examples/: data_demo.ipynb  graph_classification_demo.ipynb
examples/data/dummyNTS/: individuals.tab
ntsx/: core.py  data_loader.py  gcn.py  graph_ops.py  load.py  nts_to_nx.py  ops.py  plot.py  read_nts.py  train.py  utils.py
ntsx/encoders/: base_encoders.py  graph_encoder.py  table_encoder.py  trip_encoder.py  utils.py
ntsx/models/: embed.py  models.py
requirements/: base.txt
tests/: conftest.py  test_gcn.py  test_nts_to_nx.py  test_nx_to_torch.py  test_utils.py
tests/test_encoders/: test_base.py  test_graph_encoder.py  test_table_encoder.py  test_utils.py
tests/test_models/: test_gat.py  test_gcn.py
